src/test/resources/errors/loop-condition.intp
while (1) {
  x = x + 1
}